fix spacing on dashboard page

--- a/src/app/notifications/notifications.component.css
+++ b/src/app/notifications/notifications.component.css
@@ -20,7 +20,7 @@
   top: 56px;
   left: 20px;
   right: 20px;
-  bottom: 30px;
+  bottom: 34px;
 }
 
 .fixed-desktop-box {
